@@ -65,6 +65,7 @@ This feature was developed by Karl Hobley and Matt Westcott.
  * Switch StreamField blocks to use a `<section>` element so screen reader users can bypass them more easily (Thibaud Colas)
  * Add anchor links to StreamField blocks so users can navigate straight to a given block (Thibaud Colas)
  * Support "Ctrl + f" in-page search within collapsed StreamField blocks (Thibaud Colas)
+ * Remember the last opened side panel in the page editor, activating it on page load (Sage Abdullah)
 
 ### Bug fixes
 
